# mcp-101

./: .gitignore  CLAUDE.md  README.md  _quarto.yml  custom.css  feedback.md  index.qmd  notes.md  pyproject.toml  styles.scss
.devcontainer/: devcontainer.json
_site/: CLAUDE.html  notes.html
demo/: .env.example  README.md  client.py  gist_mcp.py  pyproject.toml  server.py
demo/arxiv_research_demo/: __init__.py  arxiv_search.py  demo.py  extractor.py  github_gist.py  models.py
examples/arxiv-server/: README.md  client_example.py  pyproject.toml  requirements.txt  server.py
examples/oauth-research-server/: README.md  client_demo.py  correct_client_demo.py  github_integration.py  oauth_client_demo.py  oauth_server.py  oauth_server_fixed.py  pyproject.toml  requirements.txt  server.py
