[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = "MCP 101 Demo: ArXiv Research Assistant Server"
authors = [
    {name = "MCP 101 Workshop", email = "workshop@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "arxiv>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
client = [
    "mcp[client]>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "isort>=5.12.0",
]

[project.scripts]
arxiv-server = "server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3