[project]
name = "mcp-oauth-research-server"
version = "1.0.0"
description = "OAuth 2.1 Research Assistant MCP Server with GitHub Integration"
authors = [
    {name = "MCP Demo", email = "demo@mcp.dev"}
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "arxiv>=2.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ICN", "PIE", "PYI", "RSE", "RUF"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
